<resources>
	<!-- App name -->
    <string name="app_name">NHC GAME</string>
    
    <!-- Auth name -->
    <string name="auth_name">Authorization</string>
    
    <!-- login view -->
    <string name="loginView_name">Login</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="rememberMe_checkbox">Remember me</string>
    <string name="login_error"></string>
    
    <!-- register view -->
    <string name="registerView_name">Registration</string>
    <string name="regUsername"></string>
    <string name="regError"></string>
    <string name="regDOB_label">Date of Birth</string>
    <string name="regCancel">Cancel</string>
    <string name="regRegister">Register</string>
    <string name="select_state">Select one</string>
    <string-array name="states">
        <item>Select state</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>DC</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennesse</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    
    <string name="select_sex">Select One</string>
    <string-array name="sex">
        <item>Select sex</item>
        <item>Female</item>
        <item>Male</item>
     </string-array>
    
    <!-- home view -->
    <string name="homeView_name" >Home</string>
    <string name="profile_menu">My Profile</string>
    <string name="forum_menu">Forum</string>
    <string name="scoreBoard_menu">Score board</string>
    <string name="scoreBenchmark_menu">Score Benchmark</string>
    <string name="import_menu">Import Data</string>
    <string name="stateRank_menu">State Ranks</string>
    <string name="invite_menu">Invite Friend</string>
    <string name="viewMap_menu">Map Website</string>

    <!-- profile view -->
    <string name="profileView_name">My Profile</string>
    
    <!-- benchmark view -->
    <string name="benchmarkView_name">Score Benchmark</string>
    
    <!-- forum view -->
    <string name="forumView_name">Forum</string>
    
    <!-- exercise view -->
    <string name="exerciseView_name">Exercise</string>
    <string name="history_label"></string>
    
    
    <!-- import view -->
    <string name="importView_name">Import Data</string>
    <string name="import_label">Import Data</string>
    
    
    
    <!-- invite View -->
    <string name="inviteView_name">Invite</string>
    <string name="select_invite">Selecct invitation type:</string>
    <string name="number_label">Enter phone number:</string>
    <string name="invite_submit">Send Invitation</string>
    
    <!-- scoreboard view -->
    <string name="scoreboardView_name">Score Board</string>
    <string name="no_ranks"></string>
    
    <!-- staterank view -->
    <string name="staterankView_name">State Rankings</string>
    
    <!-- website view -->
    <string name="websiteView_name">Website</string>
    
</resources>
