<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/reg_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:text="@string/regError" />

    <EditText
        android:id="@+id/reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Username"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/reg_passwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reg_passwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="re-enter password"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="email"
        android:ems="10"
        android:inputType="textEmailAddress" />
    
    <EditText
        android:id="@+id/reg_pnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="phone #"
        android:ems="10"
        android:inputType="phone" />

    <Spinner
        android:id="@+id/reg_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:entries="@array/states"
        android:prompt="@string/select_state"/>

    <DatePicker
        android:id="@+id/reg_DOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/reg_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sex"
        android:prompt="@string/select_sex" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/reg_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:text="@string/regCancel" />

        <Button
            android:id="@+id/reg_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.41"
            android:text="@string/regRegister" />
    </LinearLayout>
        
  </LinearLayout>
</ScrollView>


